# fullstack-dev

./: README.md
backend-101/final-project/: README.md  main.py  pyproject.toml
backend-101/lesson-1/: frameworks_overview.md
backend-101/lesson-2/: app.py  pyproject.toml  readme.md
backend-101/lesson-3/my_app/: README.md  main.py  pyproject.toml  result.txt
backend-101/lesson-3/my_app/utils/: helpers.py
backend-101/lesson-5/: .env.example  main.py  pyproject.toml
backend-101/lesson-9/: pyproject.toml
