[project]
name = "lesson-2"
version = "0.1.0"
description = "test project"
authors = [
    {name = "Anatoliy",email = "bullet2018@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
